--- a/app/styles/forms.scss
+++ b/app/styles/forms.scss
@@ -155,7 +155,7 @@ input[type="text"], input[type="password"], input[type="email"] {
   border-width: $focus-border-thickness !important;
   border-color: $form-border-color;
   height:48px;
-  padding: 7px 15px;
+  padding: 5px 15px 7px;
   font-size:18px;
   line-height:normal;
 
